syntax = "proto3";
package near;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/nakji-network/connectors/near";

message NearMessage {
  oneof message {
    Block block = 1;
    Transaction tx = 2;
  }
}

message Block {
  string author = 1;
  BlockHeader header = 2;
  repeated Chunk chunks = 3;

  message BlockHeader {
    uint64 height = 1;
    optional uint64 prev_height = 2;
    string epoch_id = 3;
    string next_epoch_id = 4;
    string hash = 5;
    string prev_hash = 6;
    string prev_state_root = 7;
    string chunk_receipts_root = 8;
    string chunk_headers_root = 9;
    string chunk_tx_root = 10;
    string outcome_root = 11;
    uint64 chunks_included = 12;
    string challenges_root = 13;
    google.protobuf.Timestamp ts = 14;
    string random_value = 15;
    repeated ValidatorStake validator_proposals = 16;
    repeated bool chunk_mask = 17;
    bytes gas_price = 18;
    optional uint64 block_ordinal = 19;
    bytes total_supply = 20;
    repeated SlashedValidator challenges_result = 21;
    string last_final_block = 22;
    string last_ds_final_block = 23;
    string next_bp_hash = 24;
    string block_merkle_root = 25;
    optional string epoch_sync_data_hash = 26;
    repeated string approvals = 27;
    string signature = 28;
    uint32 latest_protocol_version = 29;
    message SlashedValidator {
      string account_id = 1;
      bool is_double_sign = 2;
    }
  }
  message Chunk {
    string chunk_hash = 1;
    string prev_block_hash = 2;
    string outcome_root = 3;
    string prev_state_root = 4;
    string encoded_merkle_root = 5;
    uint64 encoded_length = 6;
    uint64 height_created = 7;
    uint64 height_included = 8;
    uint64 shard_id = 9;
    uint64 gas_used = 10;
    uint64 gas_limit = 11;
    bytes balance_burnt = 12;
    string outgoing_receipts_root = 13;
    string tx_root = 14;
    repeated ValidatorStake validator_proposals = 16;
    string signature = 17;
  }
  message ValidatorStake {
    string account_id = 1;
    string public_key = 2;
    bytes stake = 3;
  }
}

message Transaction {
  google.protobuf.Timestamp ts = 1;
  string signer_id = 2;
  string public_key = 3;
  uint64 nonce = 4;
  string receiver_id = 5;
  string hash = 6;
  repeated Action actions = 7;
}

message Action {
  oneof action {
    CreateAccount create_account = 1;
    DeployContract deploy_contract = 2;
    FunctionCall function_call = 3;
    Transfer transfer = 4;
    Stake stake = 5;
    AddKey add_key = 6;
    DeleteKey delete_key = 7;
    DeleteAccount delete_account = 8;
  }

  message CreateAccount {}
  message DeployContract { string code = 1; }
  message FunctionCall {
    string method_name = 1;
    string args = 2;
    uint64 gas = 3;
    bytes deposit = 4;
  }
  message Transfer { bytes deposit = 1; }
  message Stake {
    bytes stake = 1;
    string public_key = 2;
  }
  message AddKey {
    string public_key = 1;
    AccessKey access_key = 2;
  }
  message DeleteKey { string public_key = 1; }
  message DeleteAccount { string beneficiary_id = 1; }
}

message AccessKey {
  uint64 nonce = 1;
  oneof permission {
    FullAccessPermission full_access = 2;
    FunctionCallPermission function_call = 3;
  }

  message FullAccessPermission {}
  message FunctionCallPermission {
    optional bytes allowance = 1;
    string receiver_id = 2;
    repeated string method_names = 3;
  }
}
